--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.NoteGenie"
         tools:targetApi="31">
         <activity
+            android:name=".FlashcardsPage"
+            android:exported="false" />
+        <activity
+            android:name=".HomePage"
+            android:exported="false" />
+        <activity
             android:name=".DisplaySummaryContent"
             android:exported="false" />
         <activity
