--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,6 @@
             android:name=".RegisterActivity"
             android:exported="true" />
         <activity
-            android:name=".HomeActivity"
-            android:exported="true" />
-        <activity
             android:name=".SignInActivity"
             android:exported="true" />
         <activity
@@ -35,7 +32,8 @@
             android:exported="true" />
         <activity
             android:name=".SummaryPage"
-            android:exported="true" />
+            android:exported="true"
+            android:windowSoftInputMode="adjustNothing" />
         <activity
             android:name=".StartActivity"
             android:exported="true">
