--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,11 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
     }
+
+
+
 
     buildFeatures{
 
@@ -42,12 +46,15 @@ android {
     buildFeatures {
         viewBinding = true
     }
+
+
 }
 
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.github.JagarYousef:Mindo:2.0.0'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-auth:21.1.0'
