--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-database-ktx:20.2.2'
     implementation 'com.google.mlkit:translate:17.0.1'
     implementation 'com.google.firebase:firebase-auth-ktx:22.0.0'
+    implementation "com.squareup.okhttp3:okhttp:4.10.0"
+    implementation 'com.itextpdf:itextg:5.5.10'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
 }
