--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx:22.0.0'
     implementation "com.squareup.okhttp3:okhttp:4.10.0"
     implementation 'com.itextpdf:itextg:5.5.10'
+    implementation 'com.itextpdf:itextg:5.5.10'
     implementation 'com.google.mlkit:text-recognition:16.0.0'
     implementation 'com.google.code.gson:gson:2.9.0'
     testImplementation 'junit:junit:4.13.2'
