Somehow got the loading screen to work

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:theme="@style/Theme.NoteGenie"
         tools:targetApi="31">
         <activity
+            android:name=".GeneratingSummaryLoadingScreen"
+            android:exported="false" />
+        <activity
             android:name=".AddSummaryPage"
             android:exported="false" />
         <activity
