Changed the hint from finder to QuickNote Search

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:theme="@style/Theme.NoteGenie"
         tools:targetApi="31">
         <activity
+            android:name=".EditSummary"
+            android:exported="false" />
+        <activity
             android:name=".FlashCardsCard"
             android:exported="false" />
         <activity
